Most of form validation but I have to make each input field a component

--- a/src/styles.css
+++ b/src/styles.css
@@ -230,3 +230,12 @@ textarea{
 .liked{
     background-color: red;
 }
+
+.formError{
+    color: red;
+    display: none;
+}
+
+input:invalid[focused="true"] ~ .formError{
+    display: block;
+}
