most rerender problems fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -134,7 +134,7 @@ input[type=number] {
 }
 
 .feedBack{
-    position: absolute;
+    position: fixed;
     /* right: 20px;
     bottom: 25px; */
     left: 50%;
