--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 :root{
     --textColor: rgb(231, 231, 231);
     --textBoxcolor: rgba(143, 210, 255, 0.582);
+    --boxColor: rgb(18, 18, 66);
 }
 
 #root{
@@ -57,7 +58,7 @@ nav>ul>li{
 }
 
 footer{
-    background-color: rgb(22, 17, 53);
+    background-color: var(--boxColor);
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -198,7 +199,7 @@ textarea{
 .menuBox{
     width: 300px;
     border-radius: 10px;
-    background-color: rgb(18, 18, 66);
+    background-color: var(--boxColor);
     border: 2px solid rgb(39, 75, 129);
     display: flex;
     flex-direction: column;
@@ -235,22 +236,96 @@ textarea{
     cursor: pointer;
 }
 
-.listBox{
-    border: 2px solid rgb(21, 27, 102);
-    border-radius: 10px;
-    padding: 10px;
-    margin: 20px 20px 0 20px;
-    background-color: rgb(35, 43, 131);
+.searchContainer{
+    margin-top: 20px;
+    
+}
+.searchForm{
+    
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
 
+.sortContainer{
+    display: flex;
+    justify-content: center;
+}
+
+#sortBy, #sortDir, #searchBar, .searchButton{
+    background: none;
+    color: var(--textColor);
+    font-size: 120%;
+    font-weight: 600;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    transition: 0.3s;
+    border: none;
+    padding: 0 10px;
+    height: 50px;
+    border-bottom: 1px solid white;
+}
+
+#sortBy{
+    border-bottom-left-radius: 15px;
+    border-left: 1px solid white;
+}
+
+#sortDir{
+    border-bottom-right-radius: 15px;
+    border-right: 1px solid white;
+}
+
+.searchButton{
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-top: 1px solid white;
+    border-right: 1px solid white;
+}
+
+
+#searchBar{
+    width: 300px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-top: 1px solid white;
+    border-left: 1px solid white;
+    outline: none;
+    height: 48px;
+}
+
+option{
+    color: black;
+}
+
+#searchBar:focus, #sortDir:focus, #sortBy:focus{
+    box-shadow: inset 0 0 3px rgb(255, 255, 255);
+}
+
+.searchButton:hover, #searchBar:hover, #sortBy:hover, #sortDir:hover{
+    box-shadow: inset 0 0 5px rgb(255, 255, 255);
+}
+
+.listBox{
+    z-index: 1;
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin: 20px 20px 0 20px;
+    background-image: linear-gradient(225deg, rgb(19, 28, 75), rgb(18, 82, 112));
+    cursor: pointer;
+    transition: 0.3s;
+}
+.listBox:hover{
+    box-shadow: inset 0 0 3px rgb(255, 255, 255);
+}
+hr{
+    padding: 0;
+    margin: 0;
+}
 .deleteBox{
     background-color: rgb(35, 35, 59); 
     /* Idk somehow gray it out */
 }
 
-.liked{
-    background-color: red;
-}
 
 .formError{
     color: red;
@@ -262,8 +337,98 @@ input:invalid[focused="true"] + .formError{
 }
 
 .confirmWindow{
+    border-radius: 15px;
     width: 500px;
-    background-color: darkslateblue;
+    background: var(--boxColor);
     position: fixed;
+    padding: 10px;
+    border: solid 1px var(--textColor);
+}
+.confirmWindow button{
+    margin: 10px;
+    margin-top: 20px;
+    font-size: 120%;
+    color: var(--textColor);
+    padding: 5px 10px;
+    background: none;
+}
+.confirmWindow hr{
+    width: 60%;
+    display: block;
+    margin: auto;
+}
+::placeholder {
+    color: rgb(19, 28, 75);
+}
+.circleButton{
+    margin: 0 -5px;
+    padding: 5px;
+    height: 40px;
+    width: 40px;
+    background: none;
+    border: none;
+    z-index: 2;
+
+}
+.circleButton img{
+    height: 100%;
+    width: 100%;
     
+}
+
+.smallPicture{
+    height: 20px;
+    width: 20px;
+    vertical-align: middle;
+    padding: 10px;
+}
+
+.postTitle{
+    display: inline-block;
+}
+
+.postBottom{
+    display: grid;
+    position: relative;
+    grid-template-columns: 50% 50%;
+    vertical-align: middle;
+}
+
+.likeNumber{
+    height: 50px;
+    display: grid;
+    grid-template-columns: 50px 50px;
+    vertical-align: middle;
+}
+
+.likeNumber>button, .likeNumber>p{
+    display: inline-block;
+    position: absolute;
+    bottom: 0;
+}
+.likeNumber>p{
+    left: 50px;
+    margin: 10px -10px;
+}
+
+.likeNumber>button, .likeNumber>p{
+    display: inline-block;
+}
+
+.dates{
+    height: 85px;
+}
+.dates>p{
+    width: fit-content;
+    position: absolute;
+    right: 0;
+}
+.bottomDate{
+    top: 40px;
+}
+.edit{
+    left: 90px;
+}
+.delete{
+    left: 140px;
 }
