--- a/src/styles.css
+++ b/src/styles.css
@@ -439,6 +439,14 @@ option{
 .listBox:hover{
     box-shadow: inset 0 0 3px rgb(255, 255, 255);
 }
+
+.listBox>img{
+    width: 100%;
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+}
+
 hr{
     padding: 0;
     margin: 0;
@@ -486,20 +494,30 @@ input:invalid[focused="true"] + .formError{
     color: rgb(19, 28, 75);
 }
 .circleButton{
-    margin: 0 -5px;
-    padding: 5px;
-    height: 40px;
-    width: 40px;
-    background: none;
+    color: var(--textColor);
+    font-size: 120%;
+    border-radius: 30px;
     border: none;
-    z-index: 2;
+    height: 50px;
+    width: fit-content;
+    padding: 8px;
+    background: none;
+}
+
+.circleButton:hover{
+    box-shadow: inset 0 0 5px rgb(255, 255, 255);
     cursor: pointer;
 }
+
+.like>img{
+    margin-bottom: -4px !important;
+}
+
 .circleButton img{
-    height: 100%;
-    width: 100%;
-    height: 40px;
-    width: 40px;
+    height: 35px;
+    width: 35px;
+    display: block;
+    margin: auto;
 }
 
 .backButton{
@@ -549,8 +567,8 @@ input:invalid[focused="true"] + .formError{
 
 }
 .likeNumber>p{
-    left: 50px;
-    margin: 10px -10px;
+    left: 60px;
+    margin: 13px -10px;
 }
 
 .likeNumber>button, .likeNumber>p{
@@ -576,6 +594,7 @@ input:invalid[focused="true"] + .formError{
     left: 90px;
 }
 .delete{
+    color: white;
     left: 140px;
 }
 
@@ -697,7 +716,6 @@ button>img{
     font-size: 100%;
     border-radius: 8px;
     border: 2px solid var(--textColor);
-    height: fit-content;
     width: fit-content;
     display: block;
     height: 40px;
@@ -816,7 +834,7 @@ button>img{
 
 @media only screen and (max-width: 450px) {
     .listBox{
-        height: 350px;
+        padding-bottom: 130px;
         position: relative
     }
     .postBottom{
