--- a/src/styles.css
+++ b/src/styles.css
@@ -432,7 +432,7 @@ textarea{
     border-top: 1px solid white;
     border-left: 1px solid white;
     outline: none;
-    height: 48px;
+    height: 49px;
     transition: 0.3s;
 }
 
@@ -597,8 +597,8 @@ input:invalid[focused="true"] + .formError{
 
 }
 .likeNumber>p{
-    left: 60px;
-    margin: 13px -10px;
+    left: 60px !important;
+    margin: 13px -10px !important;
 }
 
 .likeNumber>button, .likeNumber>p{
